# CPP_Codebase_Processor

./: .gitignore  CMakeLists.txt  Example Run Against Itself (CPP_Codebase_Processor_processed).txt  FileExtensionConfig.h  FileProcessableUtils.cpp  FileProcessableUtils.h  FileProcessingWorker.cpp  FileProcessingWorker.h  FileSystemModelWithGitIgnore.cpp  FileSystemModelWithGitIgnore.h  MainWindow.cpp  MainWindow.h  ProcessingDialog.cpp  ProcessingDialog.h  README.md  build_deploy_debug.bat  build_deploy_release.bat  codebase-processor.desktop  main.cpp  resources.qrc
config/: file_extensions.json
